--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--Start Loading -->
+    <div class="loading">
+        <div class="loading-content">
+            <span>l</span>
+            <span>o</span>
+            <span>a</span>
+            <span>d</span>
+            <span>i</span>
+            <span>n</span>
+            <span>g</span>
+        </div>
+
+    </div>
+    <!-- End Loading -->
     <main>
         <section class="player1 player-active">
             <h2 class="name">Player 1</h2>
@@ -25,9 +39,19 @@
             </div>
         </section>
         <button class="new-game">🔄 New game</button>
-        <div class="img">
+        <!-- <div class="img">
             <img src="img/dice-5.png" alt="">
-        </div>
+        </div> -->
+        <div class="dice">
+            <div class="cube animation-1">
+              <div class="cube_face_1"><img src="img/dice-1.png" alt=""></div>
+              <div class="cube_face_2"><img src="img/dice-2.png" alt="" srcset=""></div>
+              <div class="cube_face_3"><img src="img/dice-3.png" alt="" srcset=""></div>
+              <div class="cube_face_4"><img src="img/dice-4.png" alt="" srcset=""></div>
+              <div class="cube_face_5"><img src="img/dice-5.png" alt="" srcset=""></div>
+              <div class="cube_face_6"><img src="img/dice-6.png" alt="" srcset=""></div>
+            </div>
+          </div>
         <button class="roll">🎲 Roll dice</button>
         <button class="hold">📥 Hold</button>
         
